--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/x-data-grid": "^6.19.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
